@@ -128,6 +128,7 @@ typedef struct
         const char *rel_ext;
         /** 1 if port needs the .lnk file, 0 otherwise */
         const int needLinkerScript;
+	const char * const *crt;
       }
     linker;
 
