@@ -1,3 +1,10 @@
+2010-02-04 Borut Razem <borut.razem AT siol.net>
+
+	* src/mcs51/main.c, src/z80/main.c, src/ds390/main.c, src/hc08/main.c,
+	  src/xa51/main.c, src/SDCCmain.c, src/port.h:
+	  list of C runtime initialization object files crt0.c moved to port
+	  structure, defined for each target targets
+
 2010-02-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-gbz80.def,
